rename infisicalsecret -> secret

--- a/examples-generated/secret/v1alpha1/secret.yaml
+++ b/examples-generated/secret/v1alpha1/secret.yaml
@@ -1,8 +1,8 @@
 apiVersion: secret.crossplane.infisical.com/v1alpha1
-kind: InfisicalSecret
+kind: Secret
 metadata:
   annotations:
-    meta.upbound.io/example-id: secret/v1alpha1/infisicalsecret
+    meta.upbound.io/example-id: secret/v1alpha1/secret
   labels:
     testing.upbound.io/example-name: mongo_secret
   name: mongo-secret
