--- a/package/crds/secret.crossplane.infisical.com_secrets.yaml
+++ b/package/crds/secret.crossplane.infisical.com_secrets.yaml
@@ -4,7 +4,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.14.0
-  name: infisicalsecrets.secret.crossplane.infisical.com
+  name: secrets.secret.crossplane.infisical.com
 spec:
   group: secret.crossplane.infisical.com
   names:
@@ -12,10 +12,10 @@ spec:
     - crossplane
     - managed
     - infisical
-    kind: InfisicalSecret
-    listKind: InfisicalSecretList
-    plural: infisicalsecrets
-    singular: infisicalsecret
+    kind: Secret
+    listKind: SecretList
+    plural: secrets
+    singular: secret
   scope: Cluster
   versions:
   - additionalPrinterColumns:
@@ -34,8 +34,8 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: InfisicalSecret is the Schema for the InfisicalSecrets API. Create
-          secrets & save to Infisical
+        description: Secret is the Schema for the Secrets API. Create secrets & save
+          to Infisical
         properties:
           apiVersion:
             description: |-
@@ -55,7 +55,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: InfisicalSecretSpec defines the desired state of InfisicalSecret
+            description: SecretSpec defines the desired state of Secret
             properties:
               deletionPolicy:
                 default: Delete
@@ -366,7 +366,7 @@ spec:
               rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
                 || ''Update'' in self.managementPolicies) || has(self.forProvider.valueSecretRef)'
           status:
-            description: InfisicalSecretStatus defines the observed state of InfisicalSecret.
+            description: SecretStatus defines the observed state of Secret.
             properties:
               atProvider:
                 properties:
