--- a/package/crds/secret.crossplane.infisical.com_secrets.yaml
+++ b/package/crds/secret.crossplane.infisical.com_secrets.yaml
@@ -97,8 +97,8 @@ spec:
                     type: array
                   valueSecretRef:
                     description: |-
-                      (String, Sensitive) The value of the secret
-                      The value of the secret
+                      (String, Sensitive) The value of the secret in plain text. This is required if value_wo is not set.
+                      The value of the secret in plain text. This is required if `value_wo` is not set.
                     properties:
                       key:
                         description: The key to select.
@@ -114,6 +114,16 @@ spec:
                     - name
                     - namespace
                     type: object
+                  valueWo:
+                    description: |-
+                      only secret. If set, the secret value will not be stored in state. This is required if value is not set.11.0 or higher.
+                      The value of the secret in plain text as a write-only secret. If set, the secret value will not be stored in state. This is required if `value` is not set.11.0 or higher.
+                    type: string
+                  valueWoVersion:
+                    description: |-
+                      (Number) Used together with value_wo to trigger an update. Increment this value when an update to the value_wo is required.
+                      Used together with value_wo to trigger an update. Increment this value when an update to the value_wo is required.
+                    type: number
                   workspaceId:
                     description: |-
                       (String) The Infisical project ID
@@ -157,8 +167,8 @@ spec:
                     type: array
                   valueSecretRef:
                     description: |-
-                      (String, Sensitive) The value of the secret
-                      The value of the secret
+                      (String, Sensitive) The value of the secret in plain text. This is required if value_wo is not set.
+                      The value of the secret in plain text. This is required if `value_wo` is not set.
                     properties:
                       key:
                         description: The key to select.
@@ -174,13 +184,21 @@ spec:
                     - name
                     - namespace
                     type: object
+                  valueWo:
+                    description: |-
+                      only secret. If set, the secret value will not be stored in state. This is required if value is not set.11.0 or higher.
+                      The value of the secret in plain text as a write-only secret. If set, the secret value will not be stored in state. This is required if `value` is not set.11.0 or higher.
+                    type: string
+                  valueWoVersion:
+                    description: |-
+                      (Number) Used together with value_wo to trigger an update. Increment this value when an update to the value_wo is required.
+                      Used together with value_wo to trigger an update. Increment this value when an update to the value_wo is required.
+                    type: number
                   workspaceId:
                     description: |-
                       (String) The Infisical project ID
                       The Infisical project ID (Required for Machine Identity auth, and service tokens with multiple scopes)
                     type: string
-                required:
-                - valueSecretRef
                 type: object
               managementPolicies:
                 default:
@@ -362,9 +380,6 @@ spec:
               rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
                 || ''Update'' in self.managementPolicies) || has(self.forProvider.name)
                 || (has(self.initProvider) && has(self.initProvider.name))'
-            - message: spec.forProvider.valueSecretRef is a required parameter
-              rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
-                || ''Update'' in self.managementPolicies) || has(self.forProvider.valueSecretRef)'
           status:
             description: SecretStatus defines the observed state of Secret.
             properties:
@@ -398,6 +413,16 @@ spec:
                     items:
                       type: string
                     type: array
+                  valueWo:
+                    description: |-
+                      only secret. If set, the secret value will not be stored in state. This is required if value is not set.11.0 or higher.
+                      The value of the secret in plain text as a write-only secret. If set, the secret value will not be stored in state. This is required if `value` is not set.11.0 or higher.
+                    type: string
+                  valueWoVersion:
+                    description: |-
+                      (Number) Used together with value_wo to trigger an update. Increment this value when an update to the value_wo is required.
+                      Used together with value_wo to trigger an update. Increment this value when an update to the value_wo is required.
+                    type: number
                   workspaceId:
                     description: |-
                       (String) The Infisical project ID
