--- a/examples-generated/secretsync/v1alpha1/secretsyncgithub.yaml
+++ b/examples-generated/secretsync/v1alpha1/secretsyncgithub.yaml
@@ -13,6 +13,8 @@ spec:
     destinationConfig: '{"scope":"repository","repository_owner":"<github-repository-owner>","repository_name":"<github-repository-name>"}'
     environment: <environment-slug>
     name: github-secret-sync-demo
-    projectId: <project-id>
+    projectIdSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
     secretPath: /
     syncOptions: '{"initial_sync_behavior":"overwrite-destination","disable_secret_deletion":false,"key_schema":"INFISICAL_{{secretKey}}"}'
